Fixed Navigation Spacing
On lower resolution displays, the default padding of 10px 15px, restricted the navbar to a max of 10 links, changing it to 10px 8px, raises the limit to 11, which is what is desired.

--- a/css/2_style.css
+++ b/css/2_style.css
@@ -150,7 +150,8 @@ hr{
     letter-spacing:1px;
     -webkit-transition:background .3s ease-in-out;
     -moz-transition:background .3s ease-in-out;
-    transition:background .3s ease-in-out
+    transition:background .3s ease-in-out;
+	padding: 10px 8px;
 }
 .navbar-custom .nav li a:hover{
     outline:0;
